Criando as Classes, Categorias, Cidade, Estado, Produtos e Suas Associações

--- a/src/main/webapp/WEB-INF/template/template.xhtml
+++ b/src/main/webapp/WEB-INF/template/template.xhtml
@@ -8,14 +8,14 @@
 
 
 
-<h:head>
-	<title><h:outputText value="PDV Maia" /></title>
-</h:head>
+<head>
+<title><h:outputText value="PDV Maia" /></title>
+</head>
 
-<h:body>
+<body>
 	<h3>
 		<h:outputText value="Bem Vindo!!" />
 	</h3>
-
-</h:body>
+	
+</body>
 </html>
